# minecraft-recipe-discord-bot

./: .gitignore  Cargo.toml
data/: recipes.json
src/: main.rs  table.rs
